--- a/src/styles/components/breadcrumb.css
+++ b/src/styles/components/breadcrumb.css
@@ -65,6 +65,7 @@
 .breadcrumb-area .breadcrumb-text h2.page-title {
   font-size: 72px;
   letter-spacing: -1px;
+  padding-bottom: 1rem;
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -96,7 +97,7 @@
 
   .breadcrumb-area .breadcrumb-text h2.page-title {
     font-size: 38px;
-    padding: 1rem;
+    /* padding: 2rem; */
   }
 }
 
@@ -121,52 +122,58 @@
   right: 0;
   bottom: 0;
   background-color: #fff;
-  padding: 20px 40px;
+  padding: 0.7rem 1rem;
   z-index: 2;
 }
 
 @media (max-width: 575px) {
   .breadcrumb-area .breadcrumb-text .breadcrumb-nav {
-    padding: 10px 20px;
-    font-size: 14px;
+    padding: 1rem 0.5rem;
+    font-size: 12px;
   }
 }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li {
-  display: inline-block;
-  font-weight: 700;
-  position: relative;
-  margin: 0 5px;
+@media (max-width: 436px) {
+  .breadcrumb-area .breadcrumb-text h2.page-title {
+    font-size: 26px;
+  }
 }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li,
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li a {
-  color: #222;
-}
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li {
+    display: inline-block;
+    font-weight: 700;
+    position: relative;
+    margin: 0 5px;
+  }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li a:hover {
-  color: #87847b;
-}
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li,
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li a {
+    color: #222;
+  }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li:not(:first-child) {
-  padding-left: 10px;
-  margin-left: 10px;
-}
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li a:hover {
+    color: #87847b;
+  }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li:not(:first-child)::before {
-  position: absolute;
-  left: -2px;
-  top: 50%;
-  -webkit-transform: translateY(-48%);
-  transform: translateY(-48%);
-  content: '|';
-  color: #222;
-}
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li:not(:first-child) {
+    padding-left: 10px;
+    margin-left: 10px;
+  }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li.active {
-  color: #87847b;
-}
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li:not(:first-child)::before {
+    position: absolute;
+    left: -2px;
+    top: 50%;
+    -webkit-transform: translateY(-48%);
+    transform: translateY(-48%);
+    content: '|';
+    color: #222;
+  }
 
-.breadcrumb-area .breadcrumb-text .breadcrumb-nav li.active::before {
-  color: #87847b;
-}
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li.active {
+    color: #87847b;
+  }
+
+  .breadcrumb-area .breadcrumb-text .breadcrumb-nav li.active::before {
+    color: #87847b;
+  }
